--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 CHANGES
 =======
 
+0.9.0 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.9.0a1 (2011-02-23)
 --------------------
 
