--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ CHANGES
 - Fixed the Detailed Student Report to show data only from the selected term and not the whole school year
 - Save due_date attribute in New Activity form (https://launchpad.net/bugs/700520)
 - Make gradebook.js static thus greatly improving Gradebook performance.
+- Developers: schooltool.gradebook gained meta.zcml, apps that include
+  gradebook manually in their configure.zcml need to update.
 
 
 0.9.0a1 (2011-02-23)
