--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,7 @@ CHANGES
 - Make gradebook.js static thus greatly improving Gradebook performance.
 - Developers: schooltool.gradebook gained meta.zcml, apps that include
   gradebook manually in their configure.zcml need to update.
+- Removed dependency on schooltool.lyceum.journal by using zcml condtion
 
 
 0.9.0a1 (2011-02-23)
