--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 CHANGES
 =======
 
+0.9.0rc1 (unreleased)
+---------------------
+
+- Nothing changed yet.
+
+
 0.9.0b2 (2011-04-18)
 --------------------
 
