--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,25 +5,23 @@ CHANGES
 0.9.0 (unreleased)
 ------------------
 
+Improvements
+++++++++++++
+
+- Make gradebook.js static thus greatly improving Gradebook performance.
+- Reports action menus were moved to schooltool 1.6.0b1. Register our reports
+  using the new ``reportLink`` directive.
+- Add meta.zcml to support making this plugin optional.
 - Added ``printGradebook`` helper to print the gradebook in ftests.
 
-
-0.9.0b2 (2011-04-18)
---------------------
-
-- Reports action menus were moved to schooltool 1.6.0b1. Register our reports
-  using the new reportLink directive.
-- Add meta.zcml to support making this plugin optional.
-
-
-0.9.0b1 (2011-04-17)
---------------------
+Bug fixes
++++++++++
 
 - Removed width restriction on names in layout report card view (https://launchpad.net/bugs/643700)
 - Fixed linked column forms to use activity categories properly (https://launchpad.net/bugs/703078)
 - Fixed the Detailed Student Report to show data only from the selected term and not the whole school year
 - Save due_date attribute in New Activity form (https://launchpad.net/bugs/700520)
-- Make gradebook.js static thus greatly improving Gradebook performance.
+
 - Update translations.
 
 
