--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,10 @@ CHANGES
 0.9.0rc1 (unreleased)
 ---------------------
 
-- Nothing changed yet.
+- Created score systems container off of application root.
+- Created generations package for schooltool.requirement
+- Evolved score systems from site manager to new score systems container
+- Removed ScoreSystemsProxy entirely
 
 
 0.9.0b2 (2011-04-18)
