--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ CHANGES
 0.9.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Created external activity and source for journal average
+- Created absences and tardies columns in the gradebook (hidden by default)
 
 
 0.9.0 (2011-04-25)
