--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,10 +5,8 @@ CHANGES
 0.9.0rc1 (unreleased)
 ---------------------
 
-- Created score systems container off of application root.
-- Created generations package for schooltool.requirement
-- Evolved score systems from site manager to new score systems container
-- Removed ScoreSystemsProxy entirely
+- Move custom score systems to a new container. Fixes crash on startup
+  if gradebook has been disabled after use (https://lauchpad.net/bugs/717277).
 
 
 0.9.0b2 (2011-04-18)
