--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ CHANGES
 
 - Created external activity and source for journal average
 - Created absences and tardies columns in the gradebook (hidden by default)
+- Run functional tests without journal, add separate tests that need journal to
+  another layer (https://launchpad.net/bugs/783540)
 
 
 0.9.0 (2011-04-25)
